lab-resources/kubernetes/frontend.yaml

kind: Service
apiVersion: v1
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "frontend"
        dapr.io/app-port: "80"
        dapr.io/config: "appconfig"
    spec:
      containers:
      - name: frontend
        image: local/globoticket-dapr-frontend:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Never
