lab-resources/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: maildev
            port: 
              number: 80
      - path: /mail
        pathType: Prefix
        backend:
          service:
            name: maildev
            port:
              number: 1080
